--- a/challenges/Frontend-Mentor/Product-Card/style.css
+++ b/challenges/Frontend-Mentor/Product-Card/style.css
@@ -17,7 +17,7 @@ body {
 .container-fluid {
 
     position: relative;
-    margin: 10rem auto 0 auto;
+    margin: 10rem auto 5rem auto;
     padding: 0;
     border-radius: 15px;
     width: 92.5%;
