--- a/challenges/Frontend-Mentor/Single-Price-Grid/style.css
+++ b/challenges/Frontend-Mentor/Single-Price-Grid/style.css
@@ -9,10 +9,17 @@ body {
     background-color: hsl(204, 43%, 93%);
 }
 
+main {
+    height: 90vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .container-fluid {
     width: 100%;
     max-width: 325px;
-    margin: 2rem auto 0 auto;
+    margin: 0 auto;
     padding: 0;
     border-radius: 5px;
     overflow: hidden;
@@ -89,7 +96,6 @@ li {
 }
 
 h2 {
-    color: hsl(71, 73%, 54%);
     font-weight: 700;
     font-size: 19px;
     margin: 0 0 10px 0;
@@ -97,6 +103,12 @@ h2 {
 }
 
 /* Text */
+.moneyBack {
+    color: hsl(71, 73%, 54%);
+    font-weight: 700;
+    font-size: 19px;
+}
+
 .grayText {
     color: hsl(218, 22%, 67%);
 }
@@ -122,7 +134,7 @@ h2 {
 @media screen and (min-width: 768px) {
     .container-fluid {
         max-width: 650px;
-        margin: 12rem auto 8rem auto;
+        margin: auto;
         border-radius: 10px;
     }
 
