--- a/challenges/Frontend-Mentor/Product-Card/style.css
+++ b/challenges/Frontend-Mentor/Product-Card/style.css
@@ -9,7 +9,11 @@
 
 body {
     background-color: hsl(30, 38%, 92%);
-    display: grid;
+}
+
+main {
+    height: 90vh;
+    display: flex;
     align-items: center;
     justify-content: center;
 }
@@ -17,7 +21,7 @@ body {
 .container-fluid {
 
     position: relative;
-    margin: 10rem auto 5rem auto;
+    margin: 0 auto;
     padding: 0;
     border-radius: 15px;
     width: 92.5%;
