--- a/Projects/Muni/style.css
+++ b/Projects/Muni/style.css
@@ -7,6 +7,7 @@ body {
     background: url("images/background.jpg");
     object-fit: cover;
     background-attachment: fixed;
+    font-family: 'Comfortaa', cursive;
 }
 
 main {
@@ -20,14 +21,19 @@ a {
     text-decoration: none;
 }
 
+/* ************************* NAVBAR ************************* */
+
 #menuButton {
     background-color: none;
     color: antiquewhite;
+    font-weight: 700;
     margin: 25px;
     border: 2px solid rgba(255, 255, 255, 0.5);
 }
 
 .navbar {
+    position: sticky;
+    top: 0;
     margin: 0;
     padding: 0;
 }
@@ -46,6 +52,11 @@ a {
     cursor: default;
     padding: 25px;
     font-weight: 700;
+}
+
+.btn-close:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+    transition: 0.2s ease-in-out;
 }
 
 .linkMenu {
@@ -79,46 +90,49 @@ a {
     transition: 0.2s ease-in-out;
 }
 
-.container-fluid {
-    padding: 0;
-}
-
-.circleImage {
-    width: 100%;
-    height: 100%;
+/* ************************* IMAGES ************************* */
+.mainImage {
+    max-width: 600px;
+    width: 90vw;
+    height: 95%;
     margin: 0;
-    padding: 0;
+    padding: 0 0 1rem 0;
 }
 
-.siteMenu {
-    list-style: none;
-    display: flex;
+.parImage {
+    border: 3px solid rgba(255, 255, 255, 0.5);
+    border-radius: 10%;
+}
+
+/* ************************* CONTENT ************************* */
+
+.container-fluid {
+    display: grid;
     align-items: center;
-    justify-content: space-between;
-    text-decoration: none;
+    justify-content: center;
+    padding: 0 15px;
+    margin: 0 auto 2.5rem auto;
+}
+
+h1 {
+    color: rgb(0, 0, 0);
+    text-shadow: 0px 0px 4px rgb(255, 81, 0), 0 0 3px rgba(255, 255, 255, 0.5);
     font-weight: 700;
-    font-size: 20px;
+    border-bottom: 2px solid rgba(48, 48, 48, 0.5);
+    border-radius: 10px;
 }
 
-.siteMenu1 {
-    transform: translateY(350%);
-    color: darkred;
+p {
+    font-size: 1.25rem;
+    font-weight: 700;
 }
 
-.siteMenu2 {
-    color: darkred;
+.par1 {
+    color: rgb(19, 19, 19);
+    text-shadow: 0px 0px 4px rgb(255, 81, 0), 0 0 3px rgba(105, 105, 105, 0.75);
 }
 
-.siteMenu3 {
-    transform: translateY(350%);
-    color: darkred;
-}
-
-.link2:hover {
-    text-shadow: 0 0 5px rgba(255, 255, 255, 0.75);
-}
-
-.btn-close:hover {
-    background-color: rgba(255, 255, 255, 0.5);
-    transition: 0.2s ease-in-out;
+.par2 {
+    color: rgb(190, 190, 190);
+    text-shadow: 0px 0px 4px rgb(0, 0, 0), 0 0 3px rgba(107, 7, 0, 0.75);
 }
