--- a/Projects/Muni/style.css
+++ b/Projects/Muni/style.css
@@ -27,7 +27,7 @@ a {
     background-color: none;
     color: antiquewhite;
     font-weight: 700;
-    margin: 25px;
+    margin: 10px 15px;
     border: 2px solid rgba(255, 255, 255, 0.5);
     position: fixed;
     top: 0;
@@ -102,7 +102,19 @@ a {
 
 .parImage {
     border: 3px solid rgba(255, 255, 255, 0.25);
-    border-radius: 5%;
+    border-radius: 2.5%;
+}
+
+.caroImage {
+    display: block;
+    margin: auto;
+    max-width: 100%;
+    height: auto;
+}
+
+.carousel-inner {
+    border: 3px solid rgba(255, 255, 255, 0.25);
+    border-radius: 1%;
 }
 
 /* ************************* CONTENT ************************* */
@@ -138,4 +150,14 @@ p {
     color: rgb(209, 209, 209);
     text-shadow: 0px 0px 4px rgb(48, 48, 48), 0 0 3px rgba(255, 17, 0, 0.75);
     padding: 0 35px;
+}
+
+#costumes {
+    text-align: center;
+    padding: 0;
+}
+
+.container {
+    color: rgb(219, 219, 219);
+    text-shadow: 0px 0px 4px rgb(255, 101, 30), 0 0 3px rgba(105, 105, 105, 0.75);
 }
