--- a/Projects/Muni/style.css
+++ b/Projects/Muni/style.css
@@ -113,8 +113,8 @@ a {
 }
 
 .carousel-inner {
-    border: 3px solid rgba(255, 255, 255, 0.25);
-    border-radius: 1%;
+    border-top: 3px solid rgba(255, 255, 255, 0.25);
+    border-bottom: 3px solid rgba(255, 255, 255, 0.25);
 }
 
 /* ************************* CONTENT ************************* */
@@ -157,7 +157,7 @@ p {
     padding: 0;
 }
 
-.container {
+.footer {
     color: rgb(219, 219, 219);
     text-shadow: 0px 0px 4px rgb(255, 101, 30), 0 0 3px rgba(105, 105, 105, 0.75);
 }
