--- a/Projects/Muni/style.css
+++ b/Projects/Muni/style.css
@@ -31,6 +31,7 @@ main {
 
 #menuButton {
     background-color: none;
+    backdrop-filter: blur(4px);
     color: antiquewhite;
     font-weight: 700;
     margin: 0.5rem 0.5rem;
@@ -39,7 +40,11 @@ main {
     top: 0;
     left: 0;
     z-index: 999;
+}
 
+#menuButton:hover {
+    text-shadow: 0px 0px 4px rgba(253, 118, 56, 0.75), 0 0 2px rgba(255, 255, 255, 0.5);
+    transition: 0.15s ease-in-out;
 }
 
 .navbar {
