--- a/Projects/Muni/style.css
+++ b/Projects/Muni/style.css
@@ -13,7 +13,7 @@ html::-webkit-scrollbar {
 }
 
 body {
-    background: url("https://i.ibb.co/q1nKpNd/background.jpg");
+    background: url("https://iili.io/bTCtuS.jpg");
     object-fit: cover;
     background-attachment: fixed;
     font-family: 'Ubuntu', sans-serif;
