--- a/challenges/Frontend-Mentor/Profile-Card/style.css
+++ b/challenges/Frontend-Mentor/Profile-Card/style.css
@@ -30,12 +30,8 @@ body {
     min-height: 100vh;
     display: grid;
     place-content: center;
-    background-image: 
-	url(images/bg-pattern-top.svg), 
-	url(images/bg-pattern-bottom.svg);
-    background-position:
-        right 55vw bottom 55vh,
-        left 50vw top 50vh;
+    background-image: url(images/bg-pattern-top.svg), url(images/bg-pattern-bottom.svg);
+    background-position: right 55vw bottom 55vh, left 50vw top 50vh;
     background-repeat: no-repeat, no-repeat;
     background-size: 150%;
     background-color: var(--clr-primary-cyan);
