--- a/challenges/Frontend-Mentor/Profile-Card/style.css
+++ b/challenges/Frontend-Mentor/Profile-Card/style.css
@@ -42,6 +42,7 @@ body {
 .text-dark {
     color: var(--clr-primary-desat-blue);
     font-weight: var(--fw-bold);
+    font-size: 1.125rem;
 }
 
 .text-light {
