--- a/challenges/Frontend-Mentor/C9-Social-Proof/style.css
+++ b/challenges/Frontend-Mentor/C9-Social-Proof/style.css
@@ -67,6 +67,11 @@ body {
     flex-direction: column;
 }
 
+.rating__card,
+.testimonial__card {
+    box-shadow: 0.35rem 0.35rem 0.35rem hsla(0, 0%, 0%, 0.25);
+}
+
 .description {
     gap: 1.5rem;
 }
