--- a/challenges/Frontend-Mentor/C8-Profile-Card/style.css
+++ b/challenges/Frontend-Mentor/C8-Profile-Card/style.css
@@ -31,9 +31,9 @@ body {
     display: grid;
     place-content: center;
     background-image: url(images/bg-pattern-top.svg), url(images/bg-pattern-bottom.svg);
-    background-position: right 55vw bottom 55vh, left 50vw top 50vh;
+    background-position: right 47vw bottom 35vh, left 42vw top 47vh;
     background-repeat: no-repeat, no-repeat;
-    background-size: 150%;
+    background-size: cover;
     background-color: var(--clr-primary-cyan);
     font-family: var(--ff-main);
     font-size: var(--fs-name-stats);
@@ -139,15 +139,5 @@ footer {
 
     .small {
         font-size: 0.85rem;
-    }
-}
-
-@media (min-width: 1440px) {
-    body {
-        background-size: 50%;
-
-        background-position:
-            right 52.5vw bottom 40vh,
-            left 50vw top 48vh;
     }
 }
