--- a/challenges/Frontend-Mentor/C4-Single-Price-Grid/style.css
+++ b/challenges/Frontend-Mentor/C4-Single-Price-Grid/style.css
@@ -23,6 +23,7 @@ main {
     padding: 0;
     border-radius: 5px;
     overflow: hidden;
+    box-shadow: 0.35rem 0.35rem 0.35rem hsla(0, 0%, 0%, 0.25);
 }
 
 /* Sections */
