--- a/Projects/API-Project/style.css
+++ b/Projects/API-Project/style.css
@@ -36,6 +36,13 @@ p {
     width: 100%;
 }
 
+footer {
+    text-align: center;
+    color: var(--clr-bg-semi-light);
+    opacity: 0.5;
+    font-size: 0.7rem;
+}
+
 .flex-center-column {
     display: grid;
     place-content: center;
@@ -124,13 +131,6 @@ p {
     color: var(--clr-bg-light);
     border: 0.125rem solid var(--clr-bg-light);
     box-shadow: 0 0 0.5rem var(--clr-accents);
-}
-
-.credit {
-    text-align: center;
-    color: var(--clr-bg-semi-light);
-    opacity: 0.5;
-    font-size: 0.7rem;
 }
 
 @media (min-width: 769px) {
