--- a/Projects/API-Project/style.css
+++ b/Projects/API-Project/style.css
@@ -72,6 +72,7 @@ p {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    padding: 0.5rem;
     max-width: 800px;
 }
 
