--- a/Projects/Muni/style.css
+++ b/Projects/Muni/style.css
@@ -43,7 +43,8 @@ main {
     z-index: 999;
 }
 
-#menuButton:hover {
+#menuButton:hover,
+#menuButton:focus {
     text-shadow: 0px 0px 4px rgba(253, 118, 56, 0.75), 0 0 2px rgba(255, 255, 255, 0.5);
     transition: 0.2s ease-in-out;
 }
@@ -105,7 +106,9 @@ main {
 }
 
 .link:hover,
-.linkMenuItem:hover {
+.linkMenuItem:hover,
+.link:focus,
+.linkMenuItem:focus {
     text-shadow: 0px 0px 4px rgb(255, 81, 0), 0 0 2px rgba(255, 255, 255, 0.5);
     color: rgb(235, 235, 235);
     transform: translateX(10%);
